yaml/milvus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milvus-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milvus
  template:
    metadata:
      labels:
        app: milvus
    spec:
      containers:
        - name: milvus-standalone
          image: milvusdb/milvus:v2.4.16
          command: ["milvus", "run", "standalone"]
          resources:
            limits:
              memory: "16Gi"
              cpu: "4"
            requests:
              memory: "4Gi"
              cpu: "2"
          ports:
            - containerPort: 19530
            - containerPort: 9093
            - containerPort: 2379
          volumeMounts:
            - name: milvus-volume
              mountPath: /var/lib/milvus
            - name: config-embedetcd
              mountPath: /milvus/configs/embedEtcd.yaml
              subPath: embedEtcd.yaml
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        # - name: milvus-volume
        #   emptyDir: {}
        - name: milvus-volume
          persistentVolumeClaim:
            claimName: milvus-data-pvc

        - name: config-embedetcd
          configMap:
            name: embedetcd-config

---
apiVersion: v1
kind: Service
metadata:
  name: milvus-service
spec:
  selector:
    app: milvus
  ports:
    - name: grpc
      protocol: TCP
      port: 19530
      targetPort: 19530
    - name: etcd
      protocol: TCP
      port: 2379
      targetPort: 2379
  type: LoadBalancer

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: milvus-route
spec:
  to:
    kind: Service
    name: milvus-service
  port:
    targetPort: http
